# noukai-python-sdk

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  integration.yml  release.yml
src/noukai_sdk/: CONTEXT.md  __init__.py  _client.py  _constants.py  _errors.py  _flow.py  _jobs.py  _paths.py  _run.py  _step_iterator.py  _streaming.py  _tool_calls.py  _trace_scope.py  _transport.py  _transport_shared.py
src/noukai_sdk/_models/: __init__.py  _aliases.py  events.py  requests.py  responses.py  session.py  trace.py
src/noukai_sdk/adapters/: fastapi.py  flask.py
src/noukai_sdk/replay/: _state.py  fetcher.py  matcher.py  sse_reconstructor.py
tests/: conftest.py
tests/integration/: README.md  __init__.py  conftest.py  test_errors.py  test_events.py  test_execute.py  test_execute_async.py  test_replay.py  test_run_proxy.py  test_steps.py  test_tool_calls.py
tests/integration/fixtures/: README.md  hello-world.json  tools-enabled.json  two-step.json
tests/unit/: test_adapters_fastapi.py  test_adapters_flask.py  test_client_construction.py  test_execute.py  test_interfaces.py  test_jobs.py  test_models_roundtrip.py  test_parity.py  test_replay.py  test_replay_sync.py  test_run_proxy.py  test_sse_parser.py  test_step_iterator.py  test_sync_client.py  test_tool_call_resume.py  test_transport.py
