[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noukai-sdk"
version = "0.2.0"
description = "Python SDK for executing Noukai flows from external applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Noukai" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.6,<3.0",
    "typing-extensions>=4.10; python_version<'3.11'",
]

[project.optional-dependencies]
# The middleware itself only imports from starlette, but README examples and
# typical install profile pull both — name the extra after the user-facing
# framework (FastAPI) so installing it gets you a working environment.
fastapi = ["fastapi>=0.111", "starlette>=0.36"]
flask = ["flask>=3.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "python-dotenv>=1.0",
    "mypy>=1.10",
    "ruff>=0.5",
    # Optional framework adapters — installed for adapter tests only.
    # Not required by the SDK at runtime; absent installations cause the
    # test_adapters_fastapi / test_adapters_flask files to be auto-skipped.
    "fastapi>=0.111",
    "starlette>=0.37",
    "flask>=3.0",
    "anyio[trio]>=4.0",
]

[project.urls]
Homepage = "https://noukai.xyz"
Source = "https://github.com/abigcircle/noukai-python-sdk"
Issues = "https://github.com/abigcircle/noukai-python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/noukai_sdk"]

# Ensure the PEP 561 marker ships in the wheel so downstream mypy/pyright
# picks up the in-package type hints.
[tool.hatch.build.targets.wheel.force-include]
"src/noukai_sdk/py.typed" = "noukai_sdk/py.typed"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PT"]

[tool.mypy]
python_version = "3.10"
strict = true
disallow_any_generics = true
warn_unused_ignores = true
files = ["src/noukai_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require a live Noukai server (deselect with -m \"not integration\")",
]
